--- a/logan-cuda/Makefile
+++ b/logan-cuda/Makefile
@@ -64,7 +64,7 @@ src/logan_functions.o: src/logan_functions.cu \
 clean:
 	rm -rf $(program) $(obj)
 
-demo: $(program)
+main: $(program)
 	./$(program) inputs/example.txt 17 21 1
 
 run: $(program)
